Archive2/32/3bc5fd7274f88b/output
main.cpp: In function 'void f()':
main.cpp:8:13: error: 'a' is already declared in this scope
     using ::a;
             ^
main.cpp:3:5: warning: unused variable 'a' [-Wunused-variable]
 int a;
     ^
