Archive2/32/3bc5fd7274f88b/main.cpp
#include <iostream>

int a;

void f()
{
    using ::a;
    using ::a;
}

int main(){ }